Bug 691656 - crash in Chinese font: /typecheck in --.FAPIBuildGlyph--
Summary: crash in Chinese font: /typecheck in --.FAPIBuildGlyph--
Status: NOTIFIED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: PDF Writer (show other bugs)
Version: 9.00
Hardware: PC Windows XP
: P2 normal
Assignee: Ken Sharp
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-09-30 14:49 UTC by Mark DeVries
Modified: 2011-10-02 02:35 UTC (History)
0 users

See Also:
Customer: 1130
Word Size: ---


Attachments
4-page PS, Chinese font, typecheck in FAPIBuildGlyph (11.51 MB, application/postscript)
2010-09-30 14:49 UTC, Mark DeVries
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mark DeVries 2010-09-30 14:49:55 UTC
Created attachment 6766 [details]
4-page PS, Chinese font, typecheck in FAPIBuildGlyph

PS->PDF on the attached file crashes on page 4 with /typecheck in --.FAPIBuildGlyph-- . The command is:
C:/PROGRA~1/gs/gs9.00/bin/gswin32 -sDEVICE=pdfwrite -sOutputFile=OUT.pdf -c .setpdfwrite -f IN.ps

If I remove any or all pages BEFORE page 4, it works.
On page 4, if I take the first long hex string (<4e3a4e86...> show) and put the first character in a separate string (<4e3a> show <4e86...> show) it works.

This is a regression.  In 8.63 it dropped this string but otherwise created the PDF. In 8.64 and 8.71 it showed this string and created the PDF. Now in 9.00 I see the failure noted above; it does produce the first 3 pages of PDF.

[I entered this against Version "other" because Bugzilla doesn't have an entry for 9.00 yet.]
Comment 1 Ken Sharp 2010-10-08 12:04:48 UTC
Fixed in revision 11744, patch here:

http://ghostscript.com/pipermail/gs-cvs/2010-October/011802.html

I believe that the occasions where this 'worked' in the past are coincidental, caused by changes to the encoding and font consolidation. The actual underlying problem appears to have been in the code since first creation.
Comment 2 Mark DeVries 2010-10-12 20:38:36 UTC
I confirm that this fixed the reported problem.  Thanks for the good service.